added header/footer and contact page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <title>Github User Breakdown</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <img src='#' alt='image'>
+        </nav>
+    </header>
+    <div>
+        <div>
+            <div>
+                <div>
+                    <h1>Github User Search</h1>
+                </div> 
+                <div>
+                    <input>
+                </div> 
+                <div>
+                    <button>Search Github</button>
+                </div> 
+                <div><a href='#'>Do you need help?</a></div>
+            </div>
+        </div>
+    </div>
+    <div>
+        <div>
+
+        </div>
+    </div>
     
 </body>
 </html>
