--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 
     <footer>
         <ul>
-            <li><a href='#'>Search</a></li><li><a href='#'>Privacy</a></li><li><a href='#'>Terms</a></li><li><a href='#'>Contact</a></li><li><a href='#'>About</a></li>
+            <li><a href='index.html'>Search</a></li><li><a href='privacy.html'>Privacy</a></li><li><a href='terms.html'>Terms</a></li><li><a href='contact.html'>Contact</a></li><li><a href='about.html'>About</a></li>
         </ul>
     </footer>
 </body>
