added test for less compiler

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <title>GHS Contact</title>
 </head>
 <body>
-    <header>
+    <header class='headerNavigation'>
         <nav>
             <div>
                 <img src='#' alt='logo'>
@@ -20,7 +20,7 @@
         </nav>
     </header>
     
-<div class="container"></div>
+    <div class="container"></div>
 
 
 
