--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,7 @@
         <ul>
             <li><a href='index.html'>Search</a></li><li><a href='privacy.html'>Privacy</a></li><li><a href='terms.html'>Terms</a></li><li><a href='contact.html'>Contact</a></li><li><a href='about.html'>About</a></li>
         </ul>
+        <p>Copyright 2019 ThomasSmith Dev</p>
     </footer>
 </body>
 </html>
