added header styling

--- a/privacy.html
+++ b/privacy.html
@@ -12,7 +12,7 @@
         <nav>
             <div>
                 <img src='#' alt='logo'>
-                <h2>GUB</h2>
+                <h2>Github User Breakdown</h2>
             </div>
             <div>
                 <input>
