--- a/about.html
+++ b/about.html
@@ -8,11 +8,11 @@
     <title>About - Github User Breakdown</title>
 </head>
 <body>
-    <header class='headerNavigation'>
+    <header class='header-navigation'>
         <nav>
             <div>
                 <img src='#' alt='logo'>
-                <h2>GUB</h2>
+                <h2>Github User Breakdown</h2>
             </div>
             <div>
                 <input>
