--- a/contact.html
+++ b/contact.html
@@ -8,14 +8,14 @@
     <title>Contact - Github User Breakdown</title>
 </head>
 <body>
-    <header class='headerNavigation'>
+    <header class='header-navigation'>
             <div class='header'>
                 <img src='images/dog.jpg' alt='Our logo'>
                 <h2>Github User Breakdown</h2>
             </div>
-            <div class='searchBar'>
-                <input class='searchBarInput'>
-                <button class='searchBarBtn'>Search Github</button>
+            <div class='search-bar'>
+                <input class='search-bar-input'>
+                <button class='search-bar-btn'>Search Github</button>
             </div>
     </header>
     
