--- a/about.html
+++ b/about.html
@@ -9,16 +9,14 @@
 </head>
 <body>
     <header class='header-navigation'>
-        <nav>
-            <div>
-                <img src='#' alt='logo'>
-                <h2>Github User Breakdown</h2>
-            </div>
-            <div>
-                <input>
-                <button>Search Github</button>
-            </div>
-        </nav>
+        <div class='header'>
+            <img src='images/dog.jpg' alt='logo'>
+            <h2>Github User Breakdown</h2>
+        </div>
+        <div class='search-bar'>
+            <input class='search-bar-input'>
+            <button class='search-bar-btn'>Search Github</button>
+        </div>
     </header>
     
     <div class="container"></div>
