--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
             </form>
         </div>
     </div.>
-    <footer>
+    <footer class='footer-content'>
         <ul>
             <li><a href='index.html'>Search</a></li><li><a href='privacy.html'>Privacy</a></li><li><a href='terms.html'>Terms</a></li><li><a href='contact.html'>Contact</a></li><li><a href='about.html'>About</a></li>
         </ul>
