basic style to contact form

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
             <form>
             
                 <label>Name</label>
-                <input name="name" placeholder="Type name here">
+                <input name="name" type="text" placeholder="Type name here">
                         
                 <label>Email</label>
                 <input name="email" type="email" placeholder="Type email here">
