--- a/about.html
+++ b/about.html
@@ -19,13 +19,10 @@
         </div>
     </header>
     
-    <div class="container"></div>
+    <div class="container">
 
 
-
-
-
-
+    </div>
     <footer>
         <ul>
             <li><a href='index.html'>Search</a></li><li><a href='privacy.html'>Privacy</a></li><li><a href='terms.html'>Terms</a></li><li><a href='contact.html'>Contact</a></li><li><a href='about.html'>About</a></li>
