--- a/about.html
+++ b/about.html
@@ -26,11 +26,11 @@
 
 
 
-    <footer>
-        <ul>
-            <li><a href='index.html'>Search</a></li><li><a href='privacy.html'>Privacy</a></li><li><a href='terms.html'>Terms</a></li><li><a href='contact.html'>Contact</a></li><li><a href='about.html'>About</a></li>
+    <footer class='footer-content'>
+        <ul class='footer-content-list'>
+            <li class='footer-content-item'><a href='index.html'>Search</a></li><li class='footer-content-item'><a href='privacy.html'>Privacy</a></li><li class='footer-content-item'><a href='terms.html'>Terms</a></li><li class='footer-content-item'><a href='contact.html'>Contact</a></li><li class='footer-content-item'><a href='about.html'>About</a></li>
         </ul>
-        <p>Copyright 2019 ThomasSmith Dev</p>
+        <p class='copyright'>Copyright 2019 ThomasSmith Dev</p>
     </footer>
 </body>
 </html>
