--- a/contact.html
+++ b/contact.html
@@ -39,10 +39,10 @@
         </div>
     </div.>
     <footer class='footer-content'>
-        <ul>
-            <li><a href='index.html'>Search</a></li><li><a href='privacy.html'>Privacy</a></li><li><a href='terms.html'>Terms</a></li><li><a href='contact.html'>Contact</a></li><li><a href='about.html'>About</a></li>
-        </ul>
-        <p>Copyright 2019 ThomasSmith Dev</p>
+            <ul class='footer-content-list'>
+                <li class='footer-content-item'><a href='index.html'>Search</a></li><li class='footer-content-item'><a href='privacy.html'>Privacy</a></li><li class='footer-content-item'><a href='terms.html'>Terms</a></li><li class='footer-content-item'><a href='contact.html'>Contact</a></li><li class='footer-content-item'><a href='about.html'>About</a></li>
+            </ul>
+            <p class='copyright'>Copyright 2019 ThomasSmith Dev</p>
     </footer>
 </body>
 </html>
