--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
                     
             </form>
         </div>
-    </div.>
+    </div>
     <footer class='footer-content'>
             <ul class='footer-content-list'>
                 <li class='footer-content-item'><a href='index.html'>Search</a></li><li class='footer-content-item'><a href='privacy.html'>Privacy</a></li><li class='footer-content-item'><a href='terms.html'>Terms</a></li><li class='footer-content-item'><a href='contact.html'>Contact</a></li><li class='footer-content-item'><a href='about.html'>About</a></li>
