--- a/index.html
+++ b/index.html
@@ -19,18 +19,22 @@
             <!-- The video used here is for development purposes only and will be changed for production. Copyright is attributed to fluidui.com -->
         </div>
         <div class="search-container">
-            <h1>Github User Search</h1>
-            <input type="text">
-            <button>Search Github</button>
-            <p>Do you need help?</p>
+            <div class="search-box">
+                <h1>Github User Search</h1>
+                <div class="search-btn">
+                    <input type="text">
+                    <button>Search Github</button>
+                </div>
+                <p>Do you need help?</p>
+            </div>
         </div>
     </div>
         
-    <footer class='footer-content'>
+    <!-- <footer class='footer-content'>
             <ul class='footer-content-list'>
                 <li class='footer-content-item'><a href='index.html'>Search</a></li><li class='footer-content-item'><a href='privacy.html'>Privacy</a></li><li class='footer-content-item'><a href='terms.html'>Terms</a></li><li class='footer-content-item'><a href='contact.html'>Contact</a></li><li class='footer-content-item'><a href='about.html'>About</a></li>
             </ul>
             <p class='copyright'>Copyright 2019 ThomasSmith Dev</p>
-        </footer>
+        </footer> -->
 </body>
 </html>
