--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             </div>
         </div>
         <div class='overlay-footer'>
-            <footer class='footer-content'>
-                <ul class='footer-content-list'>
-                    <li class='footer-content-item'><a href='index.html'>Search</a></li><li class='footer-content-item'><a href='privacy.html'>Privacy</a></li><li class='footer-content-item'><a href='terms.html'>Terms</a></li><li class='footer-content-item'><a href='contact.html'>Contact</a></li><li class='footer-content-item'><a href='about.html'>About</a></li>
+            <footer class='index-footer-content'>
+                <ul class='index-footer-content-list'>
+                    <li class='index-footer-content-item'><a href='index.html'>Search</a></li><li class='index-footer-content-item'><a href='privacy.html'>Privacy</a></li><li class='index-footer-content-item'><a href='terms.html'>Terms</a></li><li class='index-footer-content-item'><a href='contact.html'>Contact</a></li><li class='index-footer-content-item'><a href='about.html'>About</a></li>
                 </ul>
                 <p class='copyright'>Copyright 2019 ThomasSmith Dev</p>
             </footer>
