--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <div class="search-box">
                 <h1>Github User Search</h1>
                 <div class="search-btn">
-                    <input type="text">
-                    <button>Search Github</button>
+                    <input id="userSearch" type="text">
+                    <button onclick="githubUser()">Search Github</button>
                 </div>
                 <p>Do you need help?</p>
             </div>
@@ -37,6 +37,6 @@
             </footer>
         </div>
     </div>
-
+    <script src="js/search.js"></script>
 </body>
 </html>
