--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <div class="search-box">
                 <h1>Github User Search</h1>
                 <div class="search-btn">
-                    <input id="userSearch" type="text">
-                    <button onclick="githubUser()">Search Github</button>
+                    <input id="userSearch" type="text" required minlength="4" maxlength="39" size="15" placeholder="Github User Name"> 
+                    <button onclick="githubUserInput()">Search Github</button>
                 </div>
                 <p>Do you need help?</p>
             </div>
