reduced footer margin/padding to 0.75

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                     <input id="userSearch" type="text" required minlength="4" maxlength="39" size="15" placeholder="Github User Name"> 
                     <button onclick="githubUserInput()">Search Github</button>
                 </div>
-                <p>Do you need help?</p>
+                <p #help-popup>Do you need help?</p>
+
             </div>
         </div>
         <div class='overlay-footer'>
