basic about page styling

--- a/about.html
+++ b/about.html
@@ -19,8 +19,31 @@
         </div>
     </header>
     
-    <div class="container">
-  </div>
+    <div class="container about">
+        <div class="developer">
+            <div class="avatar"><img src="images/dev-profile.png" alt="Full Stack Engineer Profile Pic"></div>
+            <div class="devInfo">
+                <p class="name">Matthew Thomas</p>
+                <p class="user-name">MattGThomas</p>
+            </div>
+            <div class="devBio">
+                <p>Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit amet, consectetur, adipisci[ng] velit, sed quia non numquam [do] eius modi tempora inci[di]dunt, ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?</p>
+                <p>At vero eos et accusamus et iusto odio dignissimos ducimus, qui blanditiis praesentium voluptatum deleniti atque corrupti, quos dolores et quas molestias excepturi sint, obcaecati cupiditate non provident, similique sunt in culpa, qui officia deserunt mollitia animi, id est laborum et dolorum fuga</p>
+
+            </div>
+        </div>
+        <div class="developer">
+            <div class="avatar"><img src="images/dev-profile.png" alt="Full Stack Engineer Profile Pic"></div>
+            <div class="devInfo">
+                <p class="name">Zac Smith</p>
+                <p class="user-name">zrsmith75</p>
+            </div>
+            <div class="devBio">
+                <p>Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit amet, consectetur, adipisci[ng] velit, sed quia non numquam [do] eius modi tempora inci[di]dunt, ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?</p>
+                <p>At vero eos et accusamus et iusto odio dignissimos ducimus, qui blanditiis praesentium voluptatum deleniti atque corrupti, quos dolores et quas molestias excepturi sint, obcaecati cupiditate non provident, similique sunt in culpa, qui officia deserunt mollitia animi, id est laborum et dolorum fuga</p>
+            </div>
+        </div>
+    </div>
 
     <footer class='footer-content'>
         <ul class='footer-content-list'>
