--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header> -->
     <div class="video-container">
         <div class="video-wrapper">
-            <video class="video" width="1920" height="1080" autoplay="" loop="" muted="" style="pointer-events: none;"><source src="https://93c6c96dda886ef0eb29-16b3c5928c10f23c298d1eeee55c3333.ssl.cf2.rackcdn.com/background-video.mp4" type="video/mp4"><source src="https://93c6c96dda886ef0eb29-16b3c5928c10f23c298d1eeee55c3333.ssl.cf2.rackcdn.com/background-video.ogv" type="video/ogg"><source src="https://93c6c96dda886ef0eb29-16b3c5928c10f23c298d1eeee55c3333.ssl.cf2.rackcdn.com/background-video.webv" type="video/webm"></video>
+            <video class="video" width="100%" height="auto" autoplay="" loop="" muted="" style="pointer-events: none;"><source src="https://93c6c96dda886ef0eb29-16b3c5928c10f23c298d1eeee55c3333.ssl.cf2.rackcdn.com/background-video.mp4" type="video/mp4"><source src="https://93c6c96dda886ef0eb29-16b3c5928c10f23c298d1eeee55c3333.ssl.cf2.rackcdn.com/background-video.ogv" type="video/ogg"><source src="https://93c6c96dda886ef0eb29-16b3c5928c10f23c298d1eeee55c3333.ssl.cf2.rackcdn.com/background-video.webv" type="video/webm"></video>
             <!-- The video used here is for development purposes only and will be changed for production. Copyright is attributed to fluidui.com -->
         </div>
         <div class="search-container">
