add text to search box

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="search-box">
                 <h1>Github User Search</h1>
                 <div class="search-btn">
-                    <input id="userSearch" type="text" required minlength="4" maxlength="39" size="15" placeholder="Github User Name"> 
+                    <input id="userSearch" type="text" required minlength="4" maxlength="39" size="15" placeholder="Enter Github User Name"> 
                     <button onclick="githubUserInput()">Search Github</button>
                 </div>
                 <p #help-popup>Do you need help?</p>
