--- a/terms.html
+++ b/terms.html
@@ -14,7 +14,7 @@
             <h2>Github User Breakdown</h2>
         </div>
         <div class='search-bar'>
-            <input class='search-bar-input'>
+            <input class='search-bar-input' placeholder="Enter Github User Name">
             <button class='search-bar-btn'>Search Github</button>
         </div>
     </header>
