hide main / show results with js and css

--- a/about.html
+++ b/about.html
@@ -21,10 +21,11 @@
     
     <div class="container about">
         <div class="developer">
-            <div class="avatar"><img src="images/dev-profile.png" alt="Full Stack Engineer Profile Pic"></div>
+            <div class="matt-avatar"></div>
             <div class="devInfo">
-                <p class="name">Matthew Thomas</p>
-                <p class="user-name">MattGThomas</p>
+                <p class="matt-name"></p>
+                <p class="matt-user-name"></p>
+                <p class="matt-url"></p>
             </div>
             <div class="devBio">
                 <p>Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit amet, consectetur, adipisci[ng] velit, sed quia non numquam [do] eius modi tempora inci[di]dunt, ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?</p>
@@ -33,10 +34,11 @@
             </div>
         </div>
         <div class="developer">
-            <div class="avatar"><img src="images/dev-profile.png" alt="Full Stack Engineer Profile Pic"></div>
+            <div class="zac-avatar"></div>
             <div class="devInfo">
-                <p class="name">Zac Smith</p>
-                <p class="user-name">zrsmith75</p>
+                <p class="zac-name"></p>
+                <p class="zac-user-name"></p>
+                <p class="zac-url"></p>
             </div>
             <div class="devBio">
                 <p>Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit amet, consectetur, adipisci[ng] velit, sed quia non numquam [do] eius modi tempora inci[di]dunt, ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?</p>
@@ -52,5 +54,7 @@
         </ul>
         <p class='copyright'>Copyright 2019 ThomasSmith Dev</p>
     </footer>
+
+    <script src="js/aboutInfo.js" text="text/javascript"></script>
 </body>
 </html>
