--- a/information.html
+++ b/information.html
@@ -20,7 +20,13 @@
     </header>
     
     <div class="container">
-      
+      <div class="search-results">
+          <div class="avatar"></div>
+          <p class="name"></p>
+          <p class="user-name"></p>
+          <p class="repos"></p>
+          <p class="url"></p>
+      </div>
 
     </div>
     <footer class='footer-content'>
@@ -29,5 +35,6 @@
             </ul>
             <p class='copyright'>Copyright 2019 ThomasSmith Dev</p>
     </footer>
+    <script src="js/search.js"></script>
 </body>
 </html>
