--- a/index.html
+++ b/index.html
@@ -1,43 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/index.css" />
     <title>Github User Breakdown</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- <header>
         <nav>
             <img src='#' alt='image'>
         </nav>
     </header> -->
-    <div class="video-container">
-        <div class="video-wrapper">
-            <video class="video" width="100%" height="auto" autoplay="" loop="" muted="" style="pointer-events: none;"><source src="https://93c6c96dda886ef0eb29-16b3c5928c10f23c298d1eeee55c3333.ssl.cf2.rackcdn.com/background-video.mp4" type="video/mp4"><source src="https://93c6c96dda886ef0eb29-16b3c5928c10f23c298d1eeee55c3333.ssl.cf2.rackcdn.com/background-video.ogv" type="video/ogg"><source src="https://93c6c96dda886ef0eb29-16b3c5928c10f23c298d1eeee55c3333.ssl.cf2.rackcdn.com/background-video.webv" type="video/webm"></video>
-            <!-- The video used here is for development purposes only and will be changed for production. Copyright is attributed to fluidui.com -->
+    <div class="video-container show">
+      <div class="video-wrapper">
+        <video
+          class="video"
+          width="100%"
+          height="auto"
+          autoplay=""
+          loop=""
+          muted=""
+          style="pointer-events: none;"
+        >
+          <source
+            src="https://93c6c96dda886ef0eb29-16b3c5928c10f23c298d1eeee55c3333.ssl.cf2.rackcdn.com/background-video.mp4"
+            type="video/mp4"
+          />
+          <source
+            src="https://93c6c96dda886ef0eb29-16b3c5928c10f23c298d1eeee55c3333.ssl.cf2.rackcdn.com/background-video.ogv"
+            type="video/ogg"
+          />
+          <source
+            src="https://93c6c96dda886ef0eb29-16b3c5928c10f23c298d1eeee55c3333.ssl.cf2.rackcdn.com/background-video.webv"
+            type="video/webm"
+          />
+        </video>
+        <!-- The video used here is for development purposes only and will be changed for production. Copyright is attributed to fluidui.com -->
+      </div>
+      <div class="search-container">
+        <div class="search-box">
+          <h1>Github User Search</h1>
+          <div class="search-btn">
+            <input
+              id="user-search"
+              type="text"
+              required
+              minlength="4"
+              maxlength="39"
+              size="15"
+              placeholder="Enter Github User Name"
+            />
+            <button class="search-github">Search Github</button>
+          </div>
+          <p #help-popup>Do you need help?</p>
         </div>
-        <div class="search-container">
-            <div class="search-box">
-                <h1>Github User Search</h1>
-                <div class="search-btn">
-                    <input id="userSearch" type="text" required minlength="4" maxlength="39" size="15" placeholder="Enter Github User Name"> 
-                    <button onclick="githubUserInput()">Search Github</button>
-                </div>
-                <p #help-popup>Do you need help?</p>
-
-            </div>
-        </div>
-        <div class='overlay-footer'>
-            <footer class='index-footer-content'>
-                <ul class='index-footer-content-list'>
-                    <li class='index-footer-content-item'><a href='index.html'>Search</a></li><li class='index-footer-content-item'><a href='privacy.html'>Privacy</a></li><li class='index-footer-content-item'><a href='terms.html'>Terms</a></li><li class='index-footer-content-item'><a href='contact.html'>Contact</a></li><li class='index-footer-content-item'><a href='about.html'>About</a></li>
-                </ul>
-                <p class='copyright'>Copyright 2019 ThomasSmith Dev</p>
-            </footer>
-        </div>
+      </div>
+      <div class="overlay-footer">
+        <footer class="index-footer-content">
+          <ul class="index-footer-content-list">
+            <li class="index-footer-content-item">
+              <a href="index.html">Search</a>
+            </li>
+            <li class="index-footer-content-item">
+              <a href="privacy.html">Privacy</a>
+            </li>
+            <li class="index-footer-content-item">
+              <a href="terms.html">Terms</a>
+            </li>
+            <li class="index-footer-content-item">
+              <a href="contact.html">Contact</a>
+            </li>
+            <li class="index-footer-content-item">
+              <a href="about.html">About</a>
+            </li>
+          </ul>
+          <p class="copyright">Copyright 2019 ThomasSmith Dev</p>
+        </footer>
+      </div>
     </div>
+
+    <!-- testing below -->
+    <div class="search-results hide">
+      <div class="avatar"></div>
+      <div class="user-data">
+          <p class="name"></p>
+          <p class="user-name"></p>
+          <p class="company"></p>
+          <p class="repos"></p>
+          <p class="url"></p>
+      </div>
+    
+    </div>
+    <div class="search-again hide">
+        <a href="index.html">Click to search again?</a></p>
+    </div>
+    <footer class='footer-content hide'>
+        <ul class='footer-content-list'>
+          <li class='footer-content-item'><a href='index.html'>Search</a></li><li class='footer-content-item'><a href='privacy.html'>Privacy</a></li><li class='footer-content-item'><a href='terms.html'>Terms</a></li><li class='footer-content-item'><a href='contact.html'>Contact</a></li><li class='footer-content-item'><a href='about.html'>About</a></li>
+        </ul>
+        <p class='copyright'>Copyright 2019 ThomasSmith Dev</p>
+    </footer>
+
+    <!-- testing above -->
+
     <script src="js/search.js"></script>
-</body>
+  </body>
 </html>
