--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     
     </div>
     <div class="search-again hide">
-        <a href="index.html">Click to search again?</a></p>
+        <p><a href="index.html">Click to search again?</a></p>
     </div>
     <footer class='footer-content hide'>
         <ul class='footer-content-list'>
