--- a/index.html
+++ b/index.html
@@ -85,22 +85,25 @@
     <div class="search-results hide">
       <div class="avatar"></div>
       <div class="user-data">
-          <p class="name"></p>
-          <p class="user-name"></p>
-          <p class="company"></p>
-          <p class="repos"></p>
-          <p class="url"></p>
+        <p class="name"></p>
+        <p class="user-name"></p>
+        <p class="company"></p>
+        <p class="repos"></p>
+        <p class="url"></p>
       </div>
-    
     </div>
     <div class="search-again hide">
-        <p><a href="index.html">Click to search again?</a></p>
+      <p><a href="index.html">Click to search again?</a></p>
     </div>
-    <footer class='footer-content hide'>
-        <ul class='footer-content-list'>
-          <li class='footer-content-item'><a href='index.html'>Search</a></li><li class='footer-content-item'><a href='privacy.html'>Privacy</a></li><li class='footer-content-item'><a href='terms.html'>Terms</a></li><li class='footer-content-item'><a href='contact.html'>Contact</a></li><li class='footer-content-item'><a href='about.html'>About</a></li>
-        </ul>
-        <p class='copyright'>Copyright 2019 ThomasSmith Dev</p>
+    <footer class="footer-content index hide">
+      <ul class="footer-content-list">
+        <li class="footer-content-item"><a href="index.html">Search</a></li>
+        <li class="footer-content-item"><a href="privacy.html">Privacy</a></li>
+        <li class="footer-content-item"><a href="terms.html">Terms</a></li>
+        <li class="footer-content-item"><a href="contact.html">Contact</a></li>
+        <li class="footer-content-item"><a href="about.html">About</a></li>
+      </ul>
+      <p class="copyright">Copyright 2019 ThomasSmith Dev</p>
     </footer>
 
     <!-- testing above -->
