style results and add cta button

--- a/index.html
+++ b/index.html
@@ -92,7 +92,10 @@
         <p class="url"></p>
       </div>
     </div>
+
     <div class="search-again hide">
+        <p>Want more details on this Github User?</p>
+        <button>Join Github User Breakdown Free!</button>
       <p><a href="index.html">Click to search again?</a></p>
     </div>
     <footer class="footer-content index hide">
