fix class: search-github

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h1>Github User Search</h1>
                 <div class="search-btn">
                     <input id="userSearch" type="text" required minlength="4" maxlength="39" size="15" placeholder="Enter Github User Name"> 
-                    <button onclick="showResults()">Search Github</button>
+                    <button class="search-github">Search Github</button>
                 </div>
                 <p id='help-popup-selector'>Do you need help?</p>
                 <div id="help-popup" class="popup">
