--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   
       <div class="search-again hide">
           <p>Want more details on this Github User?</p>
-          <button>Join Github User Breakdown Free!</button>
+          <a href="signup.html"><button>Join Github User Breakdown Free!</button></a>
         <p><a href="index.html">Click to search again?</a></p>
       </div>
       <footer class="footer-content index hide">
