--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="search-again hide">
           <p>Want more details on this Github User?</p>
           <a href="signup.html"><button>Join Github User Breakdown Free!</button></a>
-        <p><a href="index.html">Click to search again?</a></p>
+        <p><a class="url" href="index.html">Click to search again?</a></p>
       </div>
       <footer class="footer-content index hide">
         <ul class="footer-content-list">
@@ -65,7 +65,7 @@
           <li class="footer-content-item"><a href="privacy.html">Privacy</a></li>
           <li class="footer-content-item"><a href="terms.html">Terms</a></li>
           <li class="footer-content-item"><a href="contact.html">Contact</a></li>
-          <li class="footer-content-item"><a href="about.html">About</a></li>
+          <li class="footer-content-item"><a class="url" href="about.html">About</a></li>
         </ul>
         <p class="copyright">Copyright 2019 ThomasSmith Dev</p>
       </footer>
