--- a/privacy.html
+++ b/privacy.html
@@ -28,7 +28,7 @@
         <h3>The short version</h3>
         <p>We only collect the information you choose to give us, and we process it with your consent, or on another legal basis; we only require the minimum amount of personal information that is necessary to fulfill the purpose of your interaction with us; we don't sell it to third parties; and we only use it as this Privacy Statement describes. If you're visiting us from the European Union (EU), European Economic Area (EEA), or the United Kingdom (UK), please see our global privacy practices: we comply with the EU-US Privacy Shield Framework and we are compliant with the General Data Protection Regulation (GDPR). No matter where you are, where you live, or what your citizenship is, we provide a high standard of privacy protection to all our users around the world, regardless of their country of origin or location.</p>
 
-        <p>Of course, the short version doesn't tell you everything, so <a href="https://help.github.com/en/articles/github-privacy-statement">please click on for more details</a>!</p>
+        <p>Of course, the short version doesn't tell you everything, so <a class="url" href="https://help.github.com/en/articles/github-privacy-statement">please click on for more details</a>!</p>
 
 
     </div>
