--- a/terms.html
+++ b/terms.html
@@ -23,7 +23,7 @@
         <h1>GitHub Terms of Service</h1>
         <p>Thank you for using GitHub! We're happy you're here. Please read this Terms of Service agreement carefully before accessing or using GitHub. Because it is such an important contract between us and our users, we have tried to make it as clear as possible. For your convenience, we have presented these terms in a short non-binding summary followed by the full legal terms.</p>
         
-        <p><a href="https://help.github.com/en/articles/github-terms-of-service">Click for more information the the Github Terms of Service</a></p>
+        <p><a class="url" href="https://help.github.com/en/articles/github-terms-of-service">Click for more information the the Github Terms of Service</a></p>
 
     </div>
     <footer class='footer-content'>
