added link back to search page from logo

--- a/signup.html
+++ b/signup.html
@@ -10,9 +10,10 @@
 <body>
     <header class='header-navigation'>
             <div class='header'>
-                <img src='images/dog.jpg' alt='Our logo'>
+                <a href='index.html'><img src='images/dog.jpg' alt='Our logo'></a>
                 <h2>Github User Breakdown</h2>
             </div>
+        </a>
             <div class='search-bar'>
                 <input class='search-bar-input' placeholder="Enter Github User Name">
                 <button class='search-bar-btn'>Search Github</button>
