--- a/terms.html
+++ b/terms.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <header class='header-navigation'>
-        <div class='header'>
-            <img src='images/dog.jpg' alt='logo'>
-            <h2>Github User Breakdown</h2>
-        </div>
+            <div class='header'>
+                <a href='index.html'><img src='images/dog.jpg' alt='logo'></a>
+                <h2>Github User Breakdown</h2>
+            </div>
         <div class='search-bar'>
             <input class='search-bar-input' placeholder="Enter Github User Name">
             <button class='search-bar-btn'>Search Github</button>
