--- a/login.html
+++ b/login.html
@@ -14,8 +14,12 @@
                 <h2>Github User Breakdown</h2>
             </div>
             <div class='search-bar'>
-                <input class='search-bar-input' placeholder="Enter Github User Name">
-                <button class='search-bar-btn'>Search Github</button>
+                <button class='header-sign-up'><a href='signup.html'>Sign Up Here</a></button>
+                <button class='header-sign-in'><a href='login.html'>Sign In</a></button>
+        
+                <!-- Code below used for search bar-->
+                <!-- <input class='search-bar-input' placeholder="Enter Github User Name">
+                <button class='search-bar-btn'>Search Github</button> -->
             </div>
     </header>
     
