--- a/signup.html
+++ b/signup.html
@@ -15,8 +15,12 @@
             </div>
         </a>
             <div class='search-bar'>
-                <input class='search-bar-input' placeholder="Enter Github User Name">
-                <button class='search-bar-btn'>Search Github</button>
+                <button class='header-sign-up'><a href='signup.html'>Sign Up Here</a></button>
+                <button class='header-sign-in'><a href='login.html'>Sign In</a></button>
+        
+                <!-- Code below used for search bar-->
+                <!-- <input class='search-bar-input' placeholder="Enter Github User Name">
+                <button class='search-bar-btn'>Search Github</button> -->
             </div>
     </header>
     <div class="sign-plans">
