add required to forms as needed

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </div>
 
-    <!-- testing below -->
+    <!-- Search Results below -->
 
     <div class="search-results hide">
         <div class="avatar"></div>
@@ -70,7 +70,7 @@
         <p class="copyright">Copyright 2019 ThomasSmith Dev</p>
       </footer>
   
-      <!-- testing above -->
+      <!-- Search Results above -->
 
     <script src="js/search.js"></script>
     <script src='js/popup.js'></script>
