updated styling for home page at 500px

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="search-container">
             <div class="search-box">
-                <h1>Github User Search</h1>
+                <h1>Github <span>User</span> <span>Search</span></h1>
                 <div class="search-btn">
                     <input id="userSearch" type="text" required minlength="4" maxlength="39" size="15" placeholder="Enter Github User Name"> 
                     <button class="search-github">Search Github</button>
