add design images of website ~ changed Sign In to Login

--- a/signup.html
+++ b/signup.html
@@ -16,7 +16,7 @@
         </a>
             <div class='search-bar'>
                 <button class='header-sign-up'><a href='signup.html'>Sign Up Here</a></button>
-                <button class='header-sign-in'><a href='login.html'>Sign In</a></button>
+                <button class='header-sign-in'><a href='login.html'>Login</a></button>
         
                 <!-- Code below used for search bar-->
                 <!-- <input class='search-bar-input' placeholder="Enter Github User Name">
