--- a/information.html
+++ b/information.html
@@ -10,13 +10,13 @@
 <body>
     <header class='header-navigation'>
             <div class='header'>
-                <a href='index.html'><img src='images/dog.jpg' alt='logo'></a>
+                    <a href='index.html'><img src='images/dog.jpg' alt='logo'></a>
                 <h2>Github User Breakdown</h2>
             </div>
         <div class='search-bar'>
             <button class='header-sign-up'><a href='signup.html'>Sign Up Here</a></button>
             <button class='header-sign-in'><a href='login.html'>Sign In</a></button>
-
+    
             <!-- Code below used for search bar-->
             <!-- <input class='search-bar-input' placeholder="Enter Github User Name">
             <button class='search-bar-btn'>Search Github</button> -->
@@ -24,16 +24,13 @@
     </header>
     
     <div class="container">
-        <h1>GitHub Privacy Statement</h1>
-        <h3>Effective date: May 7, 2019</h3>
-
-        <p>Thanks for entrusting GitHub with your source code, your projects, and your personal information. Holding on to your private information is a serious responsibility, and we want you to know how we're handling it.</p>
-
-        <h3>The short version</h3>
-        <p>We only collect the information you choose to give us, and we process it with your consent, or on another legal basis; we only require the minimum amount of personal information that is necessary to fulfill the purpose of your interaction with us; we don't sell it to third parties; and we only use it as this Privacy Statement describes. If you're visiting us from the European Union (EU), European Economic Area (EEA), or the United Kingdom (UK), please see our global privacy practices: we comply with the EU-US Privacy Shield Framework and we are compliant with the General Data Protection Regulation (GDPR). No matter where you are, where you live, or what your citizenship is, we provide a high standard of privacy protection to all our users around the world, regardless of their country of origin or location.</p>
-
-        <p>Of course, the short version doesn't tell you everything, so <a class="url" href="https://help.github.com/en/articles/github-privacy-statement">please click on for more details</a>!</p>
-
+      <div class="search-results">
+          <div class="avatar"></div>
+          <p class="name"></p>
+          <p class="user-name"></p>
+          <p class="repos"></p>
+          <p class="url"></p>
+      </div>
 
     </div>
     <footer class='footer-content'>
@@ -42,5 +39,9 @@
             </ul>
             <p class='copyright'>Copyright 2019 ThomasSmith Dev</p>
     </footer>
+    <script src="js/search.js"></script>
 </body>
 </html>
+
+
+
