--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div id="help-popup" class="popup">
                     <div class="popup-content">
                     <span class="close">&times;</span>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <p>Need some help? Simply enter a Github user name in to the search field, select search Github, and let the app do the work.</p>
                     </div>
                 </div>
 
