changes commited for pull

--- a/about.html
+++ b/about.html
@@ -25,11 +25,11 @@
     
     <div class="container about">
         <div class="developer">
-            <div class="matt-avatar"></div>
+            <div class="avatar matt"><img src="images/dev-profile.png" alt=""></div>
             <div class="devInfo">
-                <p class="matt-name"></p>
-                <p class="matt-user-name"></p>
-                <p class="matt-url"></p>
+                <p class="matt name">Matt Thomas</p>
+                <p class="matt user-name">MattGThomas</p>
+                <p class="matt url"><a href="https://github.com/MattGThomas">https://github.com/MattGThomas</a></p>
             </div>
             <div class="devBio">
                 <p>Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit amet, consectetur, adipisci[ng] velit, sed quia non numquam [do] eius modi tempora inci[di]dunt, ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?</p>
@@ -38,11 +38,11 @@
             </div>
         </div>
         <div class="developer">
-            <div class="zac-avatar"></div>
+            <div class="avatar zac"><img src="images/dev-profile.png" alt=""></div>
             <div class="devInfo">
-                <p class="zac-name"></p>
-                <p class="zac-user-name"></p>
-                <p class="zac-url"></p>
+                <p class="zac name">Zac Smith</p>
+                <p class="zac user-name">zrsmith75</p>
+                <p class="zac url"><a href="https://github.com/zrsmith75">https://github.com/zrsmith75</a></p>
             </div>
             <div class="devBio">
                 <p>Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit amet, consectetur, adipisci[ng] velit, sed quia non numquam [do] eius modi tempora inci[di]dunt, ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?</p>
