removed here in navbar for space at smaller screens

--- a/signup.html
+++ b/signup.html
@@ -15,7 +15,7 @@
             </div>
         </a>
             <div class='search-bar'>
-                <button class='header-sign-up'><a href='signup.html'>Sign Up Here</a></button>
+                <button class='header-sign-up'><a href='signup.html'>Sign Up</a></button>
                 <button class='header-sign-in'><a href='login.html'>Log In</a></button>
         
                 <!-- Code below used for search bar-->
