--- a/privacy.html
+++ b/privacy.html
@@ -14,7 +14,7 @@
                 <h2>Github User Breakdown</h2>
             </div>
         <div class='search-bar'>
-            <button class='header-sign-up'><a href='signup.html'>Sign Up Here</a></button>
+            <button class='header-sign-up'><a href='signup.html'>Sign Up</a></button>
             <button class='header-sign-in'><a href='login.html'>Log In</a></button>
 
             <!-- Code below used for search bar-->
