correct typo in help

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div id="help-popup" class="popup">
                     <div class="popup-content">
                     <span class="close">&times;</span>
-                    <p>Need some help? Simply enter a Github user name in to the search field, select search Github, and let the app do the work.</p>
+                    <p>Need some help? Simply enter a Github user name in to the search field, select 'Search Github', and let the app do the work.</p>
                     </div>
                 </div>
 
