--- a/about.html
+++ b/about.html
@@ -32,9 +32,13 @@
                 <p class="matt url"><a href="https://github.com/MattGThomas">https://github.com/MattGThomas</a></p>
             </div>
             <div class="devBio">
-                <p>Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit amet, consectetur, adipisci[ng] velit, sed quia non numquam [do] eius modi tempora inci[di]dunt, ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?</p>
-                <p>At vero eos et accusamus et iusto odio dignissimos ducimus, qui blanditiis praesentium voluptatum deleniti atque corrupti, quos dolores et quas molestias excepturi sint, obcaecati cupiditate non provident, similique sunt in culpa, qui officia deserunt mollitia animi, id est laborum et dolorum fuga</p>
-
+                <h3>Education:</h3>
+                <p>Lambda School :: Full Stack Software Engineer (Student)</p>
+                <p>CTU :: MS Cybersecurity Engineer</p>
+                <p>NMSU :: BS Informtion and Communicaiton Technology</p>
+                <h3>Contact:</h3>
+                <p>Mobile: 505.555.1234</p>
+                <p>Email: bad_dude@gmail.com</p>
             </div>
         </div>
         <div class="developer">
@@ -46,13 +50,12 @@
             </div>
             <div class="devBio">
                 <h3>Education:</h3>
-                <ul>
-                    <li><p>Lambda School :: Full Stack Software Engineer (Student)</p></li>
-                    <li><p>CTU :: MS Cybersecurity Engineer</p></li>
-                    <li><p>NMSU :: BS Informtion and Communicaiton Technology</p></li>
-                </ul>
-                <p>Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit amet, consectetur, adipisci[ng] velit, sed quia non numquam [do] eius modi tempora inci[di]dunt, ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?</p>
-                <p>At vero eos et accusamus et iusto odio dignissimos ducimus, qui blanditiis praesentium voluptatum deleniti atque corrupti, quos dolores et quas molestias excepturi sint, obcaecati cupiditate non provident, similique sunt in culpa, qui officia deserunt mollitia animi, id est laborum et dolorum fuga</p>
+                <p>Lambda School :: Full Stack Software Engineer (Student)</p>
+                <p>CTU :: MS Cybersecurity Engineer</p>
+                <p>NMSU :: BS Informtion and Communicaiton Technology</p>
+                <h3>Contact:</h3>
+                <p>Mobile: 505.555.1234</p>
+                <p>Email: bad_dude@gmail.com</p>
             </div>
         </div>
     </div>
