unsaved changes to about

--- a/about.html
+++ b/about.html
@@ -37,8 +37,8 @@
                 <p>Tabor College :: Biochemistry Student (Former)</p>
                 <!-- <p>NMSU :: BS Informtion and Communicaiton Technology</p> -->
                 <h3>Contact:</h3>
-                <p>Mobile: 505.555.1234</p>
-                <p>Email: bad_dude@gmail.com</p>
+                <p>Mobile: 555.123.5647</p>
+                <p>Email: matt@matt.com</p>
             </div>
         </div>
         <div class="developer">
