changed popup to component

--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
                     <input id="userSearch" type="text" minlength="4" maxlength="39" size="15" placeholder="Enter Github User Name" required> 
                     <button class="search-github">Search Github</button>
                 </div>
-                <p id='help-popup-selector'>Do you need help?</p>
-                <div id="help-popup" class="popup">
-                    <div class="popup-content">
-                    <span class="close">&times;</span>
+                
+                <div class="popup">
+                    <div class='help-popup-selector'>Do you need help?</div>
+                    <div class="popup-content hidden-popup">
+                    <!-- <span class="close">&times;</span> -->
                     <p>Need some help? Simply enter a Github user name in to the search field, select 'Search Github', and let the app do the work.</p>
                     </div>
                 </div>
