--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
             </div>
             <div class="devBio">
                 <h3>Education:</h3>
-                <p>Lambda School :: Full Stack Software Engineer (Student)</p>
+                <p>Lambda School :: Full Stack Software Engineer (06/2020)</p>
                 <p>CTU :: MS Cybersecurity Engineer</p>
                 <p>NMSU :: BS Informtion and Communicaiton Technology</p>
                 <h3>Contact:</h3>
