change fontsize to 62.5 and make variables and global in less

--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
     
     <div class="container">
         <div class="contact-form">
-            <p>Github User Breakdown Members Login:</p>
+            <h2>Github User Breakdown Members Login:</h2>
             <form>
             
                 <label>User</label>
