--- a/signup.html
+++ b/signup.html
@@ -33,7 +33,7 @@
     </div>
     <div class="container">
         <div class="contact-form">
-            <p>Join Github User Breakdown:</p>
+            <h2>Join Github User Breakdown:</h2>
             <form>
             
                 <label>User</label>
