--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     
     <div class="container">
         <div class="contact-form">
-            <p>Please use the form below to contact us:</p>
+            <h2>Please use the form below to contact us:</h2>
             <form>
             
                 <label>Name</label>
