--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     
     <div class="container about">
         <div class="developer">
-            <div class="avatar matt"><img src="images/dev-profile.png" alt=""></div>
+            <div class="avatar matt"><img src="images/matt.jpeg" alt=""></div>
             <div class="devInfo">
                 <p class="matt name">Matt Thomas</p>
                 <p class="matt user-name">MattGThomas</p>
