added TSD logo to all pages

--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,7 @@
 <body>
     <header class='header-navigation'>
             <div class='header'>
-                <a href='index.html'><img src='images/dog.jpg' alt='Our logo'></a>
+                <a href='index.html'><img src='images/logo.png' alt='Our logo'></a>
                 <h2>Github User Breakdown</h2>
             </div>
         </a>
