--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
     <header class='header-navigation'>
         <div class='header'>
-            <a href='index.html'><img src='images/dog.jpg' alt='logo'></a>
+            <a href='index.html'><img src='images/logo.png' alt='logo'></a>
             <h2>Github User Breakdown</h2>
         </div>
         <div class='search-bar'>
